<resources>
    <string name="app_name">list_practice</string>
    <string name="item_name">TextView</string>
    <string name="item_show">Button</string>
    <string name="item_price">TextView</string>
    <string name="store_suggestions">Store suggestions</string>
    <string name="past_items">Past Items</string>
    <string name="farts">farts</string>
    <string name="shits">shits</string>
    <string name="button1">Button</string>
    <string name="textview1">TextView</string>
    <string name="button2">Button</string>
    <string name="show_list">Show List</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="new_name_text">Name</string>
    <string name="new_name_edit"></string>
    <string name="new_amount_text">Amount</string>
    <string name="new_amount_edit"></string>
    <string name="new_price_text">Price</string>
    <string name="new_price_edit"></string>
    <string name="new_desc_text">Description</string>
    <string name="new_desc_edit"></string>
    <string name="name">Name</string>
    <string name="textview" />
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>