<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/list_name_text"
        android:layout_width="390dp"
        android:layout_height="8dp"
        android:layout_weight="1"
        android:text=""
        android:textSize="30sp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="468dp"
        android:layout_weight="1">
    </ListView>


    <TextView
        android:id="@+id/full_item_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/new_list_layout_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_below="@id/list_view">

        <EditText
            android:id="@+id/list_name_id"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:hint="@string/new_name_text"
            android:text="" />

        <Button
            android:id="@+id/submit_new_list_id"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:text="submit new list" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/create_item_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_name_text"
                android:text="@string/name" />

            <EditText
                android:id="@+id/new_name_edit"
                android:layout_width="297dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text"
                android:text="@string/new_name_edit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_amount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_amount_text"
                android:text="Amount" />

            <EditText
                android:id="@+id/new_amount_edit"
                android:layout_width="297dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text"
                android:text="@string/new_amount_edit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_price_text" />

            <EditText
                android:id="@+id/new_price_edit"
                android:layout_width="297dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text"
                android:text="@string/new_price_edit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_desc_text" />

            <EditText
                android:id="@+id/new_desc_edit"
                android:layout_width="297dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text"
                android:text="@string/new_desc_edit" />
        </LinearLayout>

        <Button
            android:id="@+id/create_new_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Item" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/show_item_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Show List" />

        <Button
            android:id="@+id/add_new_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Add New Item" />

        <Button
            android:id="@+id/log_out_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Create New List" />

    </LinearLayout>

</LinearLayout>